--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
-<h1>Etch-a-sketch</h1>
-<button>New Grid</button>
-<div id="container">
-
-</div>
+<h1>Etch-a-Sketch</h1>
+<button id="new-grid-btn">New Grid</button>
+<div id="container"></div>
 </body>
 </html>
